<resources>
    <string name="app_name">18FOTCA11016</string>
    <string name="rajkot">Rajkot</string>
    <string name="female">Female</string>
    <string name="kjivrajani_rku_ac_in">kjivrajani@rku.ac.in</string>
    <string name="kjivrajani">kjivrajani</string>
    <string name="komal">Komal</string>
    <string name="_18fotca11016">18FOTCA11016</string>
    <string name="jivrajani">Jivrajani</string>
</resources>